# UWB-DW3000-System

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/app/: CMakeLists.txt
components/app/include/: app.h  app_config.h  app_context.h
components/app/src/: app.cpp  app_config.cpp  app_context.cpp
components/board/: CMakeLists.txt
components/board/include/: board.h  board_config.h  board_pins.h
components/board/src/: board.cpp  board_config.cpp
components/common/: CMakeLists.txt
components/common/include/: error_code.h  result.h  time_utils.h
components/common/src/: error_code.cpp  time_utils.cpp
components/drivers/dw3000/: CMakeLists.txt
components/drivers/dw3000/include/: dw3000_config.h  dw3000_driver.h  dw3000_port.h  dw3000_registers.h  dw3000_types.h
components/drivers/dw3000/src/: dw3000_diag.cpp  dw3000_driver.cpp  dw3000_irq.cpp  dw3000_port.cpp  dw3000_radio.cpp  dw3000_timestamp.cpp
components/platform_hal/: CMakeLists.txt
components/platform_hal/include/: hal_gpio.h  hal_irq.h  hal_log.h  hal_spi.h  hal_storage.h  hal_timer.h
components/platform_hal/src/: esp_idf_gpio.cpp  esp_idf_irq.cpp  esp_idf_log.cpp  esp_idf_spi.cpp  esp_idf_storage.cpp  esp_idf_timer.cpp
components/ranging/: CMakeLists.txt
components/roles/: CMakeLists.txt
components/utils/: CMakeLists.txt
components/uwb/: CMakeLists.txt
configs/: anchor_config.json  tag_config.json  uwb_default.json
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
tools/: flash_tag.py  generate_config_header.py  monitor.py
(+23 files in other folders)
